Turn Code Wrap Off
Remove code lines width limit.

--- a/scripts/functions-editor/functions-editor.css
+++ b/scripts/functions-editor/functions-editor.css
@@ -8,6 +8,16 @@
     text-decoration: none !important;
 }
 
+.CodeMirror-line {
+    white-space: nowrap;
+    padding-right: 0px !important;
+}
+.CodeMirror-sizer {
+    width: max-content;
+    min-width: -webkit-fill-available;
+    min-width: -moz-available;
+}
+
 #dreTopBar, #delugeLeftPane, #dreEditorFooter, .CodeMirror-gutter-elt .de.de-edit {
     display: none !important;
 }
