--- a/scripts/functions-editor/functions-editor.css
+++ b/scripts/functions-editor/functions-editor.css
@@ -64,8 +64,9 @@
   /* Fonts */
   --code-font-family: 'JetBrains Mono';
   --code-font-size: 14px;
-  --code-font-weight: 700;
-  --code-line-height: 1.5;
+  --code-font-weight: 400;
+  --code-font-line-height: 1.5;
+  --code-font-ligatures: 'zero';
 
   --system-font-family: 'Monaco';
   --primary-system-font-size: 14px;
@@ -916,7 +917,7 @@ lyte-drop-label {
 }
 
 .CodeMirror-line {
-  line-height: var(--code-line-height) !important;
+  line-height: var(--code-font-line-height) !important;
   padding-top: 0px !important;
   padding-right: 10px !important;
   padding-bottom: 0px !important;
