--- a/popup/popup.css
+++ b/popup/popup.css
@@ -151,66 +151,32 @@ body {
 /* Tabs */
 
 #tabs {
-  display: flex;
+  position: relative;
   height: 20px;
-}
-
-.tab>* {
+  background: gray;
   border-radius: 7px;
+  overflow: hidden;
 }
 
 .tab {
   display: flex;
-  font-size: 15px;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: darkred;
+  transition: left 1.5s;
 }
 
+.tab-icon {
+  width: 20px;
+  background: yellow;
+  background-image: url('chrome-extension://__MSG_@@extension_id__/images/dummy-icon.png');
+  background-size: 20px;
+  filter: invert(1);
+}
 .tab-name {
   background: red;
-  padding-left: 5px;
-  transition: width 1s;
-}
-
-.tab:not(.tab.active) .tab-name {
-  width: 0px;
-  padding-left: 0px;
-  overflow: hidden;
-}
-
-.tab.active .tab-name {
-  width: 225px;
-}
-
-.tab.active:last-child .tab-name {
-  width: 210px;
-}
-
-.tab .tab-header {
-  width: 40px;
-}
-
-.tab:nth-child(2n+1) .tab-header {
-  background: green;
-}
-
-.tab:nth-child(2n) .tab-header {
-  background: greenyellow;
-}
-
-/* .tab:not(:first-child):not(:last-child) .tab-header, */
-.tab.active + *,
-.tab-name {
-  margin-left: -20px;
-}
-
-.tab:not(:last-child) .tab-icon,
-.tab[class~="active"] .tab-icon {
-  width: calc(100% / 2);
-  text-align: center;
-}
-
-.tab:not(.tab.active):last-child .tab-header {
-  text-align: center;
-  width: 25px;
+  font-size: 15px;
 }
 
 /* Settings */
