--- a/scripts/variables.css
+++ b/scripts/variables.css
@@ -1,3 +1,112 @@
+/* ----------------------- Properties ------------------------ */
+
+:root {
+  /* --- Colors --- */
+
+  /* Text */
+  --primary-text-color: #E5E2DC;
+  --secondary-text-color: #C5C2BC;
+  --tertiary-text-color: #93918C;
+  --placeholder-color: #8E9AB6;
+  --error-text-color: #F22C3E;
+
+  /* Backgrounds */
+  --primary-background-color: #061626;
+  --secondary-background-color: #05131F;
+  --tertiary-background-color: #122438;
+  --quaternary-background-color: #475C70;
+  --header-footer-border-color: #192C40;
+
+  /* Editor */
+  --cursor-color: #8AA6C3;
+  --line-number-color: #506377;
+  --active-line-number-color: #CBE3FA;
+  --active-line-background-color: #05121E;
+  --selected-text-background-color: #1D3B53;
+  --selected-searching-text-background-color: #555B8C;
+  --searching-text-background-color: #008CFF4D;
+  --indent-guides-color: #25385A;
+  --hint-matching-symbols: #CBE386;
+  --tooltip-border-color: #657D95;
+
+  /* Syntax */
+  --comments-color: #677677;
+  --system-functions-color: #8AA9F9;
+  --variable-color: #D8DBDF;
+  --affected-variable-color: #95D8C9;
+  --strings-color: #E6C594;
+  --constants-color: #EC6477;
+  --math-operators-color: #BF94E4;
+  --logical-operators-color: #BF94E4;
+  --separators-color: #D7DEEA;
+  --semicolons-color: #D7DEEA;
+  --brackets-color: #F9D849;
+  --matching-brackets-background-color: #223342;
+  --matching-brackets-border-color: #888888;
+
+  /* Buttons */
+  --general-button-normal-color: #122438;
+  --general-button-hover-color: #314458;
+  --general-button-press-color: #506377;
+
+  --save-arguments-button-normal-color: #05131F;
+  --save-arguments-button-hover-color: #314458;
+  --save-arguments-button-press-color: #506377;
+
+  --dangerous-button-normal-color: #E53343;
+  --dangerous-button-hover-color: #CD1222;
+  --dangerous-button-press-color: #9E0E1A;
+
+  --safe-button-normal-color: #00B200;
+  --safe-button-hover-color: #019101;
+  --safe-button-press-color: #006E00;
+
+  /* Extension Pupup */
+  --extension-popup-glow-color: #89C2DA;
+
+  --extension-popup-switch-off-color: #5e6368;
+  --extension-popup-switch-on-primary-background-color: #89C2DA;
+  --extension-popup-switch-on-secondary-background-color: #4B7A8D1A;
+  --extension-popup-switch-on-primary-shadow-color: #4B7A8D;
+  --extension-popup-switch-on-secondary-shadow-color: #4D7A8D33;
+  --extension-popup-switch-on-text-color: #3B6A7D;
+
+  /* --- Other --- */
+
+  /* Fonts */
+  --code-font-family: 'JetBrains Mono';
+  --code-font-size: 14px;
+  --code-font-weight: 400;
+  --code-font-line-height: 1.5;
+  --code-font-features: 'calt', 'zero', 'ss02', 'cv03', 'cv04', 'cv16', 'cv18';
+
+  --system-font-family: 'Monaco';
+  --primary-system-font-size: 14px;
+  --secondary-system-font-size: 13px;
+  --tertiary-system-font-size: 12px;
+
+  /* Buttons */
+  --button-border-style: none;
+  --button-border-width: 1px;
+  --buttom-shadow-offset: -2px;
+
+  /* Popups */
+  --popup-border-radius: 10px;
+}
+
+
+
+/* -------------------------- Fonts -------------------------- */
+
+/* Icons */
+
+@font-face {
+  font-family: 'Icons';
+  font-style: normal;
+  font-weight: normal;
+  src: url('chrome-extension://__MSG_@@extension_id__/fonts/icons.woff2') format('woff2');
+}
+
 /* JetBrains Mono */
 
 /* Normal Fonts */
